# oot3d

./: .gitignore  .gitmodules  ARMCC.cmake  CMakeLists.txt  README.md  diff_settings.py
Data/: keep_symbols.txt  oot3d.ld
Disassembly/: CMakeLists.txt  rodata_chunks.txt
Disassembly/tools/: ctrtool  split_arm_data_chunks.py
Include/: color.hpp  global.hpp  ichain.hpp  z3Danimation.hpp  z3Dcollision_check.hpp  z3Ditem.hpp  z3Dsave.hpp  z3Dscene.hpp  z3Dvec.hpp
Source/: crt0.cpp
Source/Game/: z_face_reaction.cpp  z_skelanime.cpp  zar.cpp
Source/Game/actors/Actor_1D7/: z_actor_1d7.hpp
Source/Game/actors/Actor_1D9/: z_actor_1d9.hpp
Source/Game/actors/Actor_1DA/: z_actor_1da.cpp
Source/Game/actors/Arms_Hook/: z_arms_hook.cpp
Source/Game/actors/Arrow_Ice/: z_arrow_ice.cpp
Source/Game/actors/Bg_Bdan_Objects/: z_bg_bdan_objects.cpp
Source/Game/actors/Bg_Bdan_Switch/: z_bg_bdan_switch.hpp
Source/Game/actors/Bg_Bombwall/: z_bg_bombwall.cpp  z_bg_bombwall.hpp
Source/Game/actors/Bg_Bowl_Wall/: z_bg_bowl_wall.cpp
Source/Game/actors/Bg_Dy_Yoseizo/: z_bg_dy_yoseizo.hpp
Source/Game/actors/Bg_Ganon_Otyuka/: z_bg_ganon_otyuka.hpp
Source/Game/actors/Bg_Gate_Shutter/: z_bg_gate_shutter.cpp
Source/Game/actors/Bg_Gnd_Iceblock/: z_bg_gnd_iceblock.hpp
Source/Game/actors/Bg_Gnd_Nisekabe/: z_bg_gnd_nisekabe.hpp
Source/Game/actors/Bg_Gnd_Soulmeiro/: z_bg_gnd_soulmeiro.cpp
Source/Game/actors/Bg_Haka/: z_bg_haka.hpp
Source/Game/actors/Bg_Haka_Gate/: z_bg_haka_gate.hpp
Source/Game/actors/Bg_Haka_Sgami/: z_bg_haka_sgami.cpp
Source/Game/actors/Bg_Haka_Trap/: z_bg_haka_trap.hpp
Source/Game/actors/Bg_Haka_Zou/: z_bg_haka_zou.cpp
Source/Game/actors/Bg_Heavy_Block/: z_bg_heavy_block.cpp
Source/Game/actors/Bg_Hidan_Curtain/: z_bg_hidan_curtain.cpp
Source/Game/actors/Bg_Hidan_Fwbig/: z_bg_hidan_fwbig.hpp
Source/Game/actors/Bg_Hidan_Hrock/: z_bg_hidan_hrock.hpp
Source/Game/actors/Bg_Hidan_Rsekizou/: z_bg_hidan_rsekizou.cpp  z_bg_hidan_rsekizou.hpp
Source/Game/actors/Bg_Hidan_Syoku/: z_bg_hidan_syoku.cpp  z_bg_hidan_syoku.hpp
Source/Game/actors/Bg_Ice_Shutter/: z_bg_ice_shutter.cpp  z_bg_ice_shutter.hpp
Source/Game/actors/Bg_Jya_Haheniron/: z_bg_jya_haheniron.cpp
Source/Game/actors/Bg_Jya_Ironobj/: z_bg_jya_ironobj.cpp
Source/Game/actors/Bg_Jya_Lift/: z_bg_jya_lift.cpp
Source/Game/actors/Bg_Jya_Megami/: z_bg_jya_megami.cpp
Source/Game/actors/Bg_Jya_Zurerukabe/: z_bg_jya_zurerukabe.hpp
Source/Game/actors/Bg_Menkuri_Eye/: z_bg_menkuri_eye.hpp
Source/Game/actors/Bg_Menkuri_Nisekabe/: z_bg_menkuri_nisekabe.hpp
Source/Game/actors/Bg_Mizu_Uzu/: z_bg_mizu_uzu.cpp
Source/data/: data.cpp
Source/functions/: functions_200000s.cpp  functions_240000s.cpp  functions_2A0000s.cpp  functions_2C0000s.cpp  functions_320000s.cpp  functions_3A0000s.cpp  functions_3E0000s.cpp  functions_440000s.cpp
Source/nn/: svc.cpp
Tools/: preproc.py
data/: checksum.md5  oot3d.ld
disassembly/: CMakeLists.txt  SHT__INIT_ARRAY.txt  data_chunks.txt  oot3d.cfg
disassembly/tools/: baserom_fixes.py  e2elf.ld  exefs2elf.py  gcc_to_arm_asm.py  split_arm_data_chunks.py
include/: functions.hpp  graphics.hpp  libcpp.hpp  macros.hpp  math.hpp  non_matchings.hpp  regs.hpp  stddef.hpp  sys_math3d.hpp  types.h  variables.hpp  z3D.hpp  z3Dactor.hpp  z3Dbgcheck.hpp  z3Dcamera.hpp  z3Dcutscene.hpp  z3Dmath.hpp  z3Dobject.hpp
include/graphics/: skeleton_animation_model.hpp
include/libcpp/: lib_functions.hpp
include/tables/: actor_table.hpp
source/data/: rodata.cpp
source/functions/: functions_120000s.cpp  functions_280000s.cpp  functions_2E0000s.cpp  functions_370000s.cpp  functions_380000s.cpp  functions_4A0000s.cpp  functions_4C0000s.cpp
source/game/: skeleton_animation_model.cpp  z_actor.cpp  z_actor_table.cpp  z_animation.cpp  z_bgcheck.cpp  z_common_data.cpp  z_demo.cpp
source/game/classes/: Class_4EBE18.h
source/nn/: applet.cpp  srv.cpp
src/: SHT__INIT_ARRAY.cpp  cstring.cpp
src/data/: conststring.cpp
src/functions/: functions_100000s.cpp  functions_140000s.cpp  functions_180000s.cpp  functions_1C0000s.cpp  functions_300000s.cpp  functions_310000s.cpp  functions_340000s.cpp  functions_350000s.cpp  functions_360000s.cpp  functions_3C0000s.cpp  functions_400000s.cpp  functions_408000s.cpp  functions_410000s.cpp  functions_420000s.cpp  functions_460000s.cpp  functions_480000s.cpp
src/game/: z3D.cpp  z_bgcheck.cpp  z_camera.cpp  z_collision_check.cpp  z_eff_blure.cpp  z_effect.cpp  z_equipment.cpp  z_lib.cpp  z_play.cpp
src/game/classes/: Class_4EBE18.cpp
src/nn/: dbg.cpp  dsp.cpp  err.cpp  os.cpp
tools/: ctx.py  progress.py
(+823 files in other folders)
